Update to .NET 8
no functional change

--- a/EtumrepMMO.Lib/EtumrepMMO.Lib.csproj
+++ b/EtumrepMMO.Lib/EtumrepMMO.Lib.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
     <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
@@ -9,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="PKHeX.Core" Version="24.1.12" />
+    <PackageReference Include="PKHeX.Core" Version="24.11.11" />
   </ItemGroup>
 
   <Choose>
