--- a/EtumrepMMO.Lib/EtumrepMMO.Lib.csproj
+++ b/EtumrepMMO.Lib/EtumrepMMO.Lib.csproj
@@ -1,7 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
@@ -11,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="PKHeX.Core" Version="24.11.11" />
+    <PackageReference Include="PKHeX.Core" Version="26.1.7" />
   </ItemGroup>
 
   <Choose>
